oriterm_core/tests/snapshots/vttest__120x40_02_screen_07.snap
---
source: oriterm_core/tests/vttest.rs
expression: text
---
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
                                                                                                                                    
Push <RETURN>                                                                                                                       
Soft scroll down region [20..21] size 2 Line 45
